# bridge

./: .gitignore  CLAUDE.md  README.md  Travolta  gidilo  setup.md
.github/workflows/: base-ci.yml  solana-ci.yml
base/: .env.example  Makefile  README.md  foundry.toml  lcov.info
base/deployments/: base_mainnet.json  base_sepolia_alpha.json  base_sepolia_prod.json  template.json
base/script/: Deploy.s.sol  DevOps.s.sol  HelperConfig.s.sol  UpgradeScript.s.sol
base/script/actions/: CreateToken.s.sol
base/src/: Bridge.sol  BridgeValidator.sol  CrossChainERC20.sol  CrossChainERC20Factory.sol  ISMVerification.sol
base/src/libraries/: ISMVerificationLib.sol  MessageLib.sol  MessageStorageLib.sol  SVMLib.sol  TokenLib.sol  VerificationLib.sol
base/test/: Bridge.t.sol  BridgeValidator.t.sol  CommonTest.t.sol  CrossChainERC20.t.sol  CrossChainERC20Factory.t.sol  ISMVerification.t.sol  TestVerify.t.sol
clients/ts/: package.json
scripts/: README.md  package.json
scripts/src/: bin.ts
solana/: Anchor.toml  Makefile  README.md  idl.base_relayer.ts  idl.bridge.ts  idl.ts  package.json  waitAndExecuteOnBase.ts
solana/programs/base_relayer/: Cargo.toml
solana/programs/base_relayer/src/: lib.rs
solana/programs/base_relayer/src/instructions/: initialize.rs  mod.rs  pay_for_relay.rs  set_config.rs
solana/programs/base_relayer/src/internal/: eip_1559.rs  gas_config.rs  math.rs
solana/programs/base_relayer/src/state/: cfg.rs  message_to_relay.rs
solana/programs/base_relayer/src/test_utils/: mod.rs
solana/scripts/: constants.ts
(+216 files in other folders)
